prevent expand/collapse when copying 2nd level details

--- a/metron-interface/metron-alerts/src/app/pcap/pcap-packet/pcap-packet.component.scss
+++ b/metron-interface/metron-alerts/src/app/pcap/pcap-packet/pcap-packet.component.scss
@@ -27,9 +27,9 @@
 }
 
 .proto-fields {
-  margin-left: 1em;
+  cursor: text;
+  padding-left: 1em;
 }
-
 
 .field-name {
   display: none
